--- a/TradeManager/TradeManager.csproj
+++ b/TradeManager/TradeManager.csproj
@@ -45,6 +45,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Domain\EnrichedTrade.cs" />
+    <Compile Include="Domain\Trade.cs" />
+    <Compile Include="Domain\TradePrice.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TradeManagerModule.cs" />
