--- a/TradeManager/TradeManager.csproj
+++ b/TradeManager/TradeManager.csproj
@@ -45,9 +45,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Domain\EnrichedTrade.cs" />
-    <Compile Include="Domain\Trade.cs" />
-    <Compile Include="Domain\TradePrice.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TradeManagerModule.cs" />
@@ -57,6 +54,12 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\TradeManager.Common\TradeManager.Common.csproj">
+      <Project>{D9128F34-9CD4-4AF1-945B-A71953901D2F}</Project>
+      <Name>TradeManager.Common</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
