Changed rabbit IP address to DNS.

--- a/TheBookClinic.Saga/App.config
+++ b/TheBookClinic.Saga/App.config
@@ -53,11 +53,11 @@
     </assemblyBinding>
   </runtime>
   <appSettings>
-    <add key="rabbitmq_uri" value="rabbitmq://104.41.218.254:5672/TheBook" />
+    <add key="rabbitmq_uri" value="rabbitmq://rabbit-workflow.northeurope.azurecontainer.io:5672/TheBook" />
     <add key="rabbitmq_username" value="guest" />
     <add key="rabbitmq_password" value="guest" />
-    <add key="rabbitmq_crmDataEndpoint" value="rabbitmq://104.41.218.254:5672/TheBook/crm_data" />
-    <add key="rabbitmq_pricingDataEndpoint" value="rabbitmq://104.41.218.254:5672/TheBook/pricing_data" />
+    <add key="rabbitmq_crmDataEndpoint" value="rabbitmq://rabbit-workflow.northeurope.azurecontainer.io:5672/TheBook/crm_data" />
+    <add key="rabbitmq_pricingDataEndpoint" value="rabbitmq://rabbit-workflow.northeurope.azurecontainer.io:5672/TheBook/pricing_data" />
 
     <add key="sqlConnectionString" value="Server=tcp:workflow-db.database.windows.net,1433;Initial Catalog=workflow-db;Persist Security Info=False;User ID=db-user;Password=DbPassword123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" />
     
