--- a/TheBookClinic.TradeManager/App.config
+++ b/TheBookClinic.TradeManager/App.config
@@ -55,11 +55,11 @@
     <add key="baseAddress" value="localhost" />
     <add key="port" value="9701" />
 
-    <add key="rabbitmq_uri" value="rabbitmq://104.41.218.254:5672/TheBook" />
+    <add key="rabbitmq_uri" value="rabbitmq://rabbit-workflow.northeurope.azurecontainer.io:5672/TheBook" />
     <add key="rabbitmq_username" value="guest" />
     <add key="rabbitmq_password" value="guest" />
 
-    <add key="rabbitmq_tradeSagaUri" value="rabbitmq://104.41.218.254:5672/TheBook/trade_saga" />
+    <add key="rabbitmq_tradeSagaUri" value="rabbitmq://rabbit-workflow.northeurope.azurecontainer.io:5672/TheBook/trade_saga" />
     
     <add key="seq_url" value="http://seq-workflow.northeurope.azurecontainer.io:5341" />
   </appSettings>
