Changed rabbit IP address to DNS.

--- a/TheBookClinic.PricingService/App.config
+++ b/TheBookClinic.PricingService/App.config
@@ -24,11 +24,11 @@
     </assemblyBinding>
   </runtime>
   <appSettings>
-    <add key="rabbitmq_uri" value="rabbitmq://104.41.218.254:5672/TheBook" />
+    <add key="rabbitmq_uri" value="rabbitmq://rabbit-workflow.northeurope.azurecontainer.io:5672/TheBook" />
     <add key="rabbitmq_username" value="guest" />
     <add key="rabbitmq_password" value="guest" />
 
-    <add key="rabbitmq_tradeSagaUri" value="rabbitmq://104.41.218.254:5672/TheBook/trade_saga" />
+    <add key="rabbitmq_tradeSagaUri" value="rabbitmq://rabbit-workflow.northeurope.azurecontainer.io:5672/TheBook/trade_saga" />
 
     <add key="seq_url" value="http://seq-workflow.northeurope.azurecontainer.io:5341" />
   </appSettings>
